Display:flex and posit:relative were added to footer to fix overlapping problem

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,11 +1,14 @@
 footer {
     width: 100vw;
-    // padding-top: 90px;
+    display: flex;
     text-align: center;
     color: rgb(255, 249, 249);
     font-size: 14px;
+    position: relative;
     .footer__wrapper {
         background-color: rgba(11, 61, 97, 0.9);
+        width: 100%;
+
     }
 
     .wrapper__p {
